--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,27 @@
   direction: rtl;
   font-family: "Hafs", "Courier New", Courier, monospace;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 100vh;
+  background: gray;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #2f3234;
+  border-radius: 100vh;
+  border: 3px solid #272a2d;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #464849;
+}
