--- a/src/styles.css
+++ b/src/styles.css
@@ -45,3 +45,16 @@
 ::-webkit-scrollbar:hover {
   width: 20px;
 }
+
+.textarea {
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  resize: both;
+  min-height: 40px;
+  line-height: 20px;
+}
+
+.textarea[contenteditable]:empty::before {
+  color: gray;
+}
