+ arabic verse between + arabic verse number in arabic + arabic verse number in translation

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,7 @@
 .Amiri {
   direction: rtl;
   font-family: "Amiri", "Courier New", Courier, monospace;
+  font-weight: bold;
 }
 
 .letter-outline {
