- hafs + font family fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,8 +53,7 @@
     font-family: "DejaVuSans", "Arial", Courier, monospace;
 }
 
-.arabic,
-.Hafs {
+.arabic {
     direction: rtl;
     font-family: "Hafs", "Courier New", Courier, monospace;
 }
